# sensei

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt  supabase_schema.sql  test_gemini.py
backend/app/: config.py  deps.py  main.py  schemas.py
backend/app/api/: auth.py  chat.py  documents.py
backend/app/db/: repositories.py  supabase.py
backend/app/services/: gemini_client.py  pdf_ingestion.py  retrieval.py
backend/sensie_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_app.py  test_pdf_ingestion.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts  vite-env.d.ts
frontend/src/components/: ChatWindow.tsx  DocumentSidebar.tsx  PDFViewer.tsx  ParticleBackground.tsx  UploadPanel.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: AppPage.tsx  AuthPage.tsx
